Added Java fronted (it's a mess pls FIX)